# pullhook

./: .editorconfig  .gitignore  .gitleaks.toml  .lintstagedrc.js  .markdownlint.json  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  biome.jsonc  codebook.toml  commitlint.config.ts  deny.toml  dist-workspace.toml  lefthook.yaml  opencode.jsonc  package.json  rokit.toml  rustfmt.toml  skills-lock.json  tombi.toml  tui.json
.cargo/: config.toml
.codex/: config.toml
.github/: cargo-dist-build-setup.yml  dependabot.yml
.github/workflows/: ci.yaml  release.yml
.opencode/commands/: create-pull-request.md
.zed/: settings.json
scripts/: build.sh  pre-commit.sh
src/: cli.rs  error.rs  git.rs  main.rs  matcher.rs  output.rs  pm.rs  runner.rs
tests/: integration.rs  output_debug.rs  output_non_debug.rs
tests/output/: contract.md
