[package]
name = "pullhook"
version = "0.1.0"
edition = "2024"
description = "Run commands after git pull when files change"
homepage = "https://github.com/howmanysmall/pullhook"
repository = "https://github.com/howmanysmall/pullhook"
license = "MIT"

[dependencies]

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
