[package]
name = "pullhook"
version = "1.0.3"
edition = "2024"
description = "Run commands after git pull when files change"
homepage = "https://github.com/howmanysmall/pullhook"
repository = "https://github.com/howmanysmall/pullhook"
license = "MIT"

# Configuration for cargo-release
[workspace.metadata.release]
publish = false
allow-branch = ["main"]
verify = true
sign-commit = false
sign-tag = false
pre-release-hook = ["./scripts/pre-commit.sh"]
pre-release-commit-message = "chore: release {{version}}"
tag-message = "Release {{version}}"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.53"
gix = "0.80.0"
globset = "0.4.18"
rayon = "1.11.0"
shell-words = "1.1.0"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
panic = "abort"
